<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_CashCountSubmit"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MaterialTheme.PopupOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_cashCountSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/MaterialTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardViewBackgroundDark"
            android:layout_marginVertical="3dp"
            app:cardElevation="0dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_requestName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/Orange"
                    android:layout_weight=".3"
                    style="@style/TextInputLayout.CashCount">

                    <EditText
                        android:id="@+id/txtSumRequestID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/Orange"
                        android:textColor="@color/White"
                        android:hint="@string/lblRequestName"
                        android:textColorHint="@color/Orange"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:inputType="textPersonName"
                        android:imeOptions="flagNoExtractUi"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_quick_search"
                    android:layout_weight="1.7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_name_search"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardViewBackgroundDark"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Date Time"
                            android:textColorHint="@color/orange"
                            style="@style/TextInputLayout.CashCount">

                            <EditText
                                android:id="@+id/txtCurrentDateTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/Orange"
                                android:enabled="false"
                                android:paddingLeft="20dp"
                                android:text="@string/lblCashGrandTotal"
                                android:textColor="@color/White"
                                android:textColorHint="@color/Orange"
                                android:textSize="16sp"
                                android:maxLines="1"
                                android:textStyle="normal" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/Orange"
                        android:layout_marginBottom="10dp"
                        style="@style/TextInputLayout.CashCount">

                        <EditText
                            android:id="@+id/txtTransNox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lblTransNox"
                            android:textColorHint="@color/Orange"
                            android:backgroundTint="@color/Orange"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/White"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:focusableInTouchMode="false"
                            android:focusable="false"
                            android:enabled="false"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardViewBackgroundDark"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_ccOR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lblOR"
                        android:textColorHint="@color/White"
                        style="@style/TextInputLayout.CashCount">

                        <EditText
                            android:id="@+id/txtOfficialReceipt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/Orange"
                            android:paddingStart="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/White"
                            android:textColorHint="@color/Orange"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:inputType="text"
                            android:imeOptions="flagNoExtractUi"
                            android:maxLength="10"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_ccSI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lblSI"
                        android:textColorHint="@color/White"
                        style="@style/TextInputLayout.CashCount">

                        <EditText
                            android:id="@+id/txtSalesInvoice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/Orange"
                            android:paddingStart="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/White"
                            android:textColorHint="@color/Orange"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:inputType="text"
                            android:imeOptions="flagNoExtractUi"
                            android:maxLength="10"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_ccPR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lblPR"
                        android:textColorHint="@color/White"
                        style="@style/TextInputLayout.CashCount">

                        <EditText
                            android:id="@+id/txtProvisionalReceipt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/Orange"
                            android:paddingStart="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/White"
                            android:textColorHint="@color/Orange"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:inputType="text"
                            android:imeOptions="flagNoExtractUi"
                            android:maxLength="10"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_ccCR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lblCR"
                        android:textColorHint="@color/White"
                        style="@style/TextInputLayout.CashCount">

                        <EditText
                            android:id="@+id/txtCollectionReceipt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/Orange"
                            android:paddingStart="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/White"
                            android:textColorHint="@color/Orange"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:inputType="text"
                            android:imeOptions="flagNoExtractUi"
                            android:maxLength="10"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSendToServer"
                style="@style/Widget.MaterialComponents.Button"
                android:background="@drawable/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btnSend"
                android:textColor="@color/Black"
                android:textSize="18sp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>